--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,36 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300..900&display=swap");
 @import "tailwindcss";
+
+@theme {
+  --font-*: initial;
+  --font-primary: "Rubik", sans-serif;
+}
+
+@layer components {
+  .loader {
+    width: 48px;
+    height: 48px;
+
+    display: inline-block;
+    box-sizing: border-box;
+
+    border: 5px solid #fff;
+    border-bottom-color: #ff3d00;
+    border-radius: 50%;
+
+    animation: rotation 1s linear infinite;
+  }
+
+  @keyframes rotation {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+  .leaflet-container {
+    height: 100dvh;
+  }
+}
